--- a/src/app/usit/components/openreqs/job-application-comments/job-application-comments.component.html
+++ b/src/app/usit/components/openreqs/job-application-comments/job-application-comments.component.html
@@ -33,8 +33,8 @@
                         <mat-option value="Expired">Expired</mat-option>
                         <mat-option value="Full time">Full time</mat-option>
                         <mat-option value="Only Locals">Only Locals</mat-option>
-                        <mat-option value="Submitted">Submitted </mat-option>.
-                        <mat-option value="Skills Not Matching">Skills Not Matching</mat-option>Missing Skills
+                        <mat-option value="Submitted">Submitted </mat-option>
+                        <mat-option value="Skills Not Matching">Skills Not Matching</mat-option>
                         <mat-option value="Visa is not matching">Visa is not matching</mat-option>
                     </mat-select>
                     <mat-error *ngIf="jobApplyCommentsForm.get('issueType').hasError('required')">Status is
