--- a/src/app/usit/components/reports/employee-reports/employee-reports.component.html
+++ b/src/app/usit/components/reports/employee-reports/employee-reports.component.html
@@ -101,12 +101,11 @@
                   <td *ngIf="groupby=='requirements'" style="font-weight: bold;">
                     {{data.company}}
                   </td>
-                  <td *ngIf="flag3" style="font-weight: bold;">
-                    {{data.req_count}}
+                  <td *ngIf="flag3" class="narvee">
+                    <a (click)="drilldown(data.id,'requirement',data.pseudoname,data.consultantname,data.company)" > {{data.req_count}}</a>
                   </td>
                   <td class="narvee">
-                    <a
-                      (click)="drilldown(data.id,'submission',data.pseudoname,data.consultantname,data.company)">{{data.submission}}</a>
+                    <a (click)="drilldown(data.id,'submission',data.pseudoname,data.consultantname,data.company)">{{data.submission}}</a>
                   </td>
                   <td class="narvee">
                     <a (click)="drilldown(data.id,'interview',data.pseudoname,data.consultantname,data.company)"
