Added group tabs and country field in TCVR

--- a/src/app/usit/components/vendor-management/client-information/add-client-information/add-client-information.component.html
+++ b/src/app/usit/components/vendor-management/client-information/add-client-information/add-client-information.component.html
@@ -20,6 +20,13 @@
                     <input matInput formControlName="client" maxlength="50" />
                 </mat-form-field>
 
+                <mat-form-field>
+                    <mat-label>Select Country</mat-label>
+                    <mat-select formControlName="country">
+                      <mat-option value="USA">USA</mat-option>
+                      <mat-option value="UAE">UAE</mat-option>
+                    </mat-select>
+                  </mat-form-field>
                 <!-- First Level Vendor -->
                 <mat-form-field appearance="fill">
                     <mat-label>First Level Vendor Name</mat-label>
