Roles And Privileges Modifiaction on functionality

--- a/src/app/components/side-navbar/side-navbar.component.html
+++ b/src/app/components/side-navbar/side-navbar.component.html
@@ -10,7 +10,7 @@
   <mat-nav-list class="nav-list">
     <mat-list-item class="nav-list-item" [routerLink]="menu.routerLink" routerLinkActive="is-active"
       [routerLinkActiveOptions]="{exact:
-        true}" [matTooltip]="menu.text" matTooltipPosition="right">
+        true}" [matTooltip]="menu.text" matTooltipPosition="left">
       <mat-icon  matListItemIcon class="item-icon">{{menu.icon}}</mat-icon>
        <span matListItemTitle>{{menu.text}}</span>
     </mat-list-item>
@@ -20,12 +20,10 @@
 <ng-template #childMenu let-menu="menu">
   <mat-expansion-panel [class.mat-elevation-z0]="true" #pannel [ngClass]="pannel.expanded ? 'expansion-panel-2': 'expansion-panel'">
     <mat-expansion-panel-header class="expansion-panel-header" [matTooltip]="menu.text" matTooltipPosition="right">
-      <mat-icon mat-list-icon class="item-icon">{{menu.icon}}</mat-icon>
-      {{menu.text}}
+      <mat-icon mat-list-icon class="item-icon">{{menu.icon}}</mat-icon> {{menu.text}}
     </mat-expansion-panel-header>
     <!-- <mat-divider *ngIf="pannel.expanded"></mat-divider> -->
     <!-- <mat-nav-list class="nav-list"> -->
-
 
       <mat-list-item class="nav-list-item" [routerLink]="submenu.routerLink" *ngFor="let submenu of menu.children"
         routerLinkActive="is-active" [routerLinkActiveOptions]="{exact:
