--- a/src/app/usit/components/privilege-list/manage-privilege/manage-privilege.component.html
+++ b/src/app/usit/components/privilege-list/manage-privilege/manage-privilege.component.html
@@ -13,7 +13,7 @@
         <mat-label>Type</mat-label>
         <input title="" matInput placeholder="Enter Type" formControlName="type">
         <!-- errors -->
-        <mat-error class="error-message" *ngIf="form.get('type').hasError('required')">Privilege Name is
+        <mat-error class="error-message" *ngIf="form.get('type').hasError('required')">Type is
           required</mat-error>
         <mat-error class="error-message" *ngIf="form.get('type').hasError('maxlength')">Maximum characters
           reached</mat-error>
@@ -23,11 +23,22 @@
         <mat-label>Name</mat-label>
         <input title="" matInput placeholder="Enter Name" formControlName="name">
         <!-- errors -->
-        <mat-error class="error-message" *ngIf="form.get('name').hasError('required')">Privilege Type is
+        <mat-error class="error-message" *ngIf="form.get('name').hasError('required')">Name is
           required</mat-error>
         <mat-error class="error-message" *ngIf="form.get('name').hasError('maxlength')">Maximum characters
           reached</mat-error>
       </mat-form-field>
+
+      <mat-form-field class="name-field">
+        <mat-label>Privilege Type</mat-label>
+        <input title="" matInput placeholder="Enter Privelege Type-> one/many" formControlName="cardType">
+        <!-- errors -->
+        <mat-error class="error-message" *ngIf="form.get('type').hasError('required')">Privilege Type is
+          required</mat-error>
+        <mat-error class="error-message" *ngIf="form.get('type').hasError('maxlength')">Maximum characters
+          reached</mat-error>
+      </mat-form-field>
+
       <!-- <div class="error-message"  *ngIf="showValidationError">
         <mat-error>Please enter the remarks</mat-error>
       </div> -->
