--- a/src/app/usit/components/role-list/roles-list.component.html
+++ b/src/app/usit/components/role-list/roles-list.component.html
@@ -29,10 +29,10 @@
       <!-- Name Column -->
       <ng-container matColumnDef="RoleName">
         <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by roleName"> Role Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.rolename}}
-          <span [ariaDisabled]="!privilegeServ.hasPrivilege('PRIVILAGE')">
-            <mat-icon class="privileges item-icon" (click)="goToPrivilegeScreen(element)">lock_person</mat-icon>
-          </span>
+        <td mat-cell *matCellDef="let element">  <span [ariaDisabled]="!privilegeServ.hasPrivilege('PRIVILAGE')">
+          <mat-icon class="privileges item-icon" style="color: rgb(42, 64, 190)" (click)="goToPrivilegeScreen(element)">lock_person</mat-icon> </span>
+          <a (click)="goToPrivilegeScreen(element)" style="cursor: pointer; color: rgb(35, 35, 185);">    {{ element.rolename }}</a>        
+         
         </td>
       </ng-container>
       <!-- status -->
@@ -42,6 +42,7 @@
       </ng-container> -->
 
       <!-- actions -->
+       <div class="actions-view">
       <ng-container matColumnDef="Actions">
         <th mat-header-cell *matHeaderCellDef> Action </th>
         <td mat-cell *matCellDef="let role" class="action-buttons">
@@ -56,6 +57,7 @@
           </button>
         </td>
       </ng-container>
+    </div>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
