--- a/src/app/usit/components/privilege-list/manage-privilege/manage-privilege.component.html
+++ b/src/app/usit/components/privilege-list/manage-privilege/manage-privilege.component.html
@@ -31,7 +31,7 @@
 
       <mat-form-field class="name-field">
         <mat-label>Privilege Type</mat-label>
-        <input title="" matInput placeholder="Enter Privelege Type-> one/many" formControlName="cardType">
+        <input title="" matInput placeholder="Enter Privelege Type ONE or MANY" formControlName="cardType">
         <!-- errors -->
         <mat-error class="error-message" *ngIf="form.get('type').hasError('required')">Privilege Type is
           required</mat-error>
