--- a/src/app/usit/components/recruitment/requirement-list/requirement-list.component.html
+++ b/src/app/usit/components/recruitment/requirement-list/requirement-list.component.html
@@ -8,49 +8,37 @@
     <span class="header-text"> Requirements </span>
 
     <div class="requirement-actions">
-      <button
-        [disabled]="!privilegeServ.hasPrivilege('ADD_REQUIREMENTS')"
-        mat-icon-button
-        class="add-user"
-        (click)="addRequirement()"
-      >
-        <mat-icon
-          [ngClass]="{
-            'item-icon': privilegeServ.hasPrivilege('ADD_REQUIREMENTS')
-          }"
-          >add_circle</mat-icon
-        >
+
+      <button [disabled]="!privilegeServ.hasPrivilege('ADD_REQUIREMENTS_DOM')" mat-icon-button class="add-user"
+        *ngIf="flag=== 'Domrecruiting'" (click)="addRequirement()">
+        <mat-icon [ngClass]="{
+            'item-icon': privilegeServ.hasPrivilege('ADD_REQUIREMENTS_DOM')
+          }">add_circle</mat-icon>
       </button>
 
+
+      <button [disabled]="!privilegeServ.hasPrivilege('ADD_REQUIREMENTS_RECRUITMENT')" mat-icon-button class="add-user"
+        *ngIf="flag=== 'Recruiting'" (click)="addRequirement()">
+        <mat-icon [ngClass]="{
+          'item-icon': privilegeServ.hasPrivilege('ADD_REQUIREMENTS_RECRUITMENT')
+        }">add_circle</mat-icon>
+      </button>
+
+
+
+
       <div class="search-requirement">
-        <input
-          matInput
-          type="search"
-          class="search"
-          placeholder="search requirement"
-          (keyup)="applyFilter($event)"
-        />
+        <input matInput type="search" class="search" placeholder="search requirement" (keyup)="applyFilter($event)" />
       </div>
     </div>
   </div>
   <div id="table-container" class="table-wrapper">
     <section class="requirement-table-style mat-elevation-z8">
-      <table
-        mat-table
-        [dataSource]="dataSource"
-        matSort
-        (matSortChange)="onSort($event)"
-        oncopy="return false"
-      >
+      <table mat-table [dataSource]="dataSource" matSort (matSortChange)="onSort($event)" oncopy="return false">
         <!-- SNo Column -->
         <ng-container matColumnDef="SerialNum">
-          <th
-            mat-header-cell
-            *matHeaderCellDef
-            mat-sort-header
-            sortActionDescription="Sort by Serial Number"
-            style="width: 2%"
-          >
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number"
+            style="width: 2%">
             S.No
           </th>
           <td mat-cell *matCellDef="let element" style="width: 2%">
@@ -59,40 +47,21 @@
         </ng-container>
         <!-- Requirement No.-->
         <ng-container matColumnDef="RequirementNumber">
-          <th
-            mat-sort-header
-            mat-header-cell
-            *matHeaderCellDef
-            sortActionDescription="Sort by RequirementNumber"
-            style="width: 12%"
-          >
+          <th mat-sort-header mat-header-cell *matHeaderCellDef sortActionDescription="Sort by RequirementNumber"
+            style="width: 12%">
             Requirement Number
           </th>
-          <td
-            mat-cell
-            *matCellDef="let element"
-            (click)="goToReqInfo(element)"
-            style="width: 10%; text-wrap: nowrap"
-          >
+          <td mat-cell *matCellDef="let element" (click)="goToReqInfo(element)" style="width: 10%; text-wrap: nowrap">
             <div style="display: flex; gap: 5px">
               <span class="req-info">{{ element?.reqnumber }}</span>
-              <mat-icon
-                *ngIf="showLateIcon(element)"
-                [ngClass]="{ 'red-icon': element?.submission_count === 0 }"
-                >assignment_late</mat-icon
-              >
+              <mat-icon *ngIf="showLateIcon(element)"
+                [ngClass]="{ 'red-icon': element?.submission_count === 0 }">assignment_late</mat-icon>
             </div>
           </td>
         </ng-container>
         <!-- Date  mat-sort-header-->
         <ng-container matColumnDef="Date">
-          <th
-            mat-header-cell
-            *matHeaderCellDef
-            mat-sort-header
-            sortActionDescription="Sort by Date"
-            style="width: 5%"
-          >
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Date" style="width: 5%">
             Date
           </th>
           <td mat-cell *matCellDef="let element" nowrap style="width: 5%">
@@ -101,13 +70,8 @@
         </ng-container>
         <!-- Job Title-->
         <ng-container matColumnDef="JobTitle">
-          <th
-            mat-header-cell
-            *matHeaderCellDef
-            mat-sort-header
-            sortActionDescription="Sort by JobTitle"
-            style="width: 20%"
-          >
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by JobTitle"
+            style="width: 20%">
             Job Title
           </th>
           <td mat-cell *matCellDef="let element" style="width: 20%">
@@ -116,13 +80,8 @@
         </ng-container>
         <!-- Location-->
         <ng-container matColumnDef="Location">
-          <th
-            mat-header-cell
-            *matHeaderCellDef
-            sortActionDescription="Sort by Location"
-            mat-sort-header
-            style="width: 15%"
-          >
+          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Location" mat-sort-header
+            style="width: 15%">
             Location
           </th>
           <td mat-cell *matCellDef="let element" style="width: 15%">
@@ -131,12 +90,7 @@
         </ng-container>
         <!-- Email-->
         <ng-container matColumnDef="IPVendor">
-          <th
-            mat-header-cell
-            *matHeaderCellDef
-            mat-sort-header
-            sortActionDescription="Sort by IPVendor"
-          >
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by IPVendor">
             IP/Vendor
           </th>
           <td mat-cell *matCellDef="let element">
@@ -145,13 +99,8 @@
         </ng-container>
         <!-- Contact Number-->
         <ng-container matColumnDef="EmployementType">
-          <th
-            mat-header-cell
-            *matHeaderCellDef
-            mat-sort-header
-            sortActionDescription="Sort by EmployementType"
-            style="width: 3%"
-          >
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by EmployementType"
+            style="width: 3%">
             Emp Type
           </th>
           <td mat-cell *matCellDef="let element" style="width: 3%">
@@ -161,31 +110,18 @@
 
         <!-- Assigned To Column-->
         <ng-container matColumnDef="AssignedTo">
-          <th
-            mat-header-cell
-            *matHeaderCellDef
-            mat-sort-header
-            sortActionDescription="Sort by Submitted"
-            style="width: 5%"
-          >
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Submitted"
+            style="width: 5%">
             Assigned To
           </th>
-          <td
-            mat-cell
-            *matCellDef="let element"
-            style="width: 5%; white-space: pre-line; overflow-wrap: break-word"
-          >
+          <td mat-cell *matCellDef="let element" style="width: 5%; white-space: pre-line; overflow-wrap: break-word">
             <div [matTooltip]="element?.fullname" class="truncate-text">
               <ng-container *ngIf="element?.fullname; else noName">
-                <ng-container
-                  *ngIf="element.fullname.includes(','); else singleName"
-                >
-                  <ng-container
-                    *ngFor="
+                <ng-container *ngIf="element.fullname.includes(','); else singleName">
+                  <ng-container *ngFor="
                       let name of element.fullname.split(',');
                       let last = last
-                    "
-                  >
+                    ">
                     {{ name.trim() | titlecase }}<span *ngIf="!last">,</span>
                     <br />
                   </ng-container>
@@ -201,13 +137,8 @@
 
         <!-- Added By Column-->
         <ng-container matColumnDef="AddedBy">
-          <th
-            mat-header-cell
-            *matHeaderCellDef
-            mat-sort-header
-            sortActionDescription="Sort by AddedBy"
-            style="width: 5%"
-          >
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by AddedBy"
+            style="width: 5%">
             Added By
           </th>
           <td mat-cell *matCellDef="let element" style="width: 5%">
@@ -217,35 +148,20 @@
 
         <!-- Submitted Column-->
         <ng-container matColumnDef="Submitted">
-          <th
-            mat-header-cell
-            *matHeaderCellDef
-            mat-sort-header
-            sortActionDescription="Sort by Submitted"
-            style="width: 3%"
-          >
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Submitted"
+            style="width: 3%">
             CV's
           </th>
-          <td
-            mat-cell
-            *matCellDef="let element"
-            class="submission-count"
-            style="width: 3%"
-            (click)="submissionCount(element)"
-          >
+          <td mat-cell *matCellDef="let element" class="submission-count" style="width: 3%"
+            (click)="submissionCount(element)">
             {{ element?.submission_count }}
           </td>
         </ng-container>
 
         <!-- Status Column -->
         <ng-container matColumnDef="Status">
-          <th
-            mat-header-cell
-            *matHeaderCellDef
-            mat-sort-header
-            sortActionDescription="Sort by Status"
-            style="width: 3%"
-          >
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Status"
+            style="width: 3%">
             Status
           </th>
           <td mat-cell *matCellDef="let requirement" style="width: 3%">
@@ -256,40 +172,32 @@
         <!-- Action Column -->
         <ng-container matColumnDef="Action">
           <th mat-header-cell *matHeaderCellDef>Action</th>
-          <td
-            mat-cell
-            *matCellDef="let requirement"
-            style="white-space: nowrap"
-          >
+          <td mat-cell *matCellDef="let requirement" style="white-space: nowrap">
             <span class="action-buttons">
-              <button
-                [disabled]="!privilegeServ.hasPrivilege('EDIT_REQUIREMENTS')"
-                mat-icon-button
-                (click)="editRequirement(requirement)"
-                class="action-button-ed"
-              >
-                <mat-icon
-                  [ngClass]="{
-                    'edit-icon': privilegeServ.hasPrivilege('EDIT_REQUIREMENTS')
-                  }"
-                  >edit</mat-icon
-                >
+
+              <button [disabled]="!privilegeServ.hasPrivilege('EDIT_REQUIREMENTS_RECRUITMENT')" mat-icon-button
+                *ngIf="flag==='Recruiting'" (click)="editRequirement(requirement)" class="action-button-ed">
+                <mat-icon [ngClass]="{
+                    'edit-icon': privilegeServ.hasPrivilege('EDIT_REQUIREMENTS_RECRUITMENT')
+                  }">edit</mat-icon>
               </button>
 
-              <button
-                [disabled]="!privilegeServ.hasPrivilege('DELETE_REQUIREMENTS')"
-                mat-icon-button
-                (click)="deleteRequirement(requirement)"
-                class="action-button-ed"
-              >
-                <mat-icon
-                  [ngClass]="{
+
+              <button [disabled]="!privilegeServ.hasPrivilege('EDIT_REQUIREMENTS_DOM')" mat-icon-button
+                *ngIf="flag=== 'Domrecruiting'" (click)="editRequirement(requirement)" class="action-button-ed">
+                <mat-icon [ngClass]="{
+                    'edit-icon': privilegeServ.hasPrivilege('EDIT_REQUIREMENTS_DOMng ')
+                  }">edit</mat-icon>
+              </button>
+
+
+              <button [disabled]="!privilegeServ.hasPrivilege('DELETE_REQUIREMENTS_RECRUITMENT')" mat-icon-button
+                (click)="deleteRequirement(requirement)" class="action-button-ed">
+                <mat-icon [ngClass]="{
                     'delete-icon': privilegeServ.hasPrivilege(
-                      'DELETE_REQUIREMENTS'
+                      'DELETE_REQUIREMENTS_RECRUITMENT'
                     )
-                  }"
-                  >delete</mat-icon
-                >
+                  }">delete</mat-icon>
               </button>
             </span>
           </td>
@@ -298,10 +206,7 @@
         <!-- table columns ends  -->
 
         <!-- table ROW -->
-        <tr
-          mat-header-row
-          *matHeaderRowDef="dataTableColumns; sticky: true"
-        ></tr>
+        <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
         <tr mat-row *matRowDef="let row; columns: dataTableColumns"></tr>
       </table>
       <p class="no-data-found" *ngIf="!dataSource.filteredData.length">
@@ -313,17 +218,9 @@
 
   <div class="paginator">
     <!-- paginator -->
-    <mat-paginator
-      (page)="handlePageEvent($event)"
-      [length]="totalItems"
-      [pageSize]="pageSize"
-      [disabled]="false"
-      [showFirstLastButtons]="showFirstLastButtons"
-      [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
-      [hidePageSize]="hidePageSize"
-      [pageIndex]="currentPageIndex"
-      aria-label="Select page"
-    >
+    <mat-paginator (page)="handlePageEvent($event)" [length]="totalItems" [pageSize]="pageSize" [disabled]="false"
+      [showFirstLastButtons]="showFirstLastButtons" [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
+      [hidePageSize]="hidePageSize" [pageIndex]="currentPageIndex" aria-label="Select page">
     </mat-paginator>
   </div>
 </div>
