--- a/src/app/usit/components/sales/consultant-list/consultant-list.component.html
+++ b/src/app/usit/components/sales/consultant-list/consultant-list.component.html
@@ -48,10 +48,35 @@
         </div>
         <button type="button" mat-raised-button color="primary" (click)="refreshForm()"
           *ngIf="flag !== 'presales'">Refresh</button>
-        <button [disabled]="!privilegeServ.hasPrivilege('ADD_CONSULTANT')" mat-icon-button class="add-user"
+
+        <!-- <button [disabled]="!privilegeServ.hasPrivilege('SALES_CONSULTANT')&&!privilegeServ.hasPrivilege('ADD_CONSULTANT_SALES') ||
+        !privilegeServ.hasPrivilege('RECRUITING_CONSULTANT') && privilegeServ.hasPrivilege('ADD_CONSULTANT_SALES')" mat-icon-button class="add-user"
           (click)="addConsultant()" matTooltip="Add" matTooltipPosition="left">
           <mat-icon [ngClass]="{'item-icon': privilegeServ.hasPrivilege('ADD_CONSULTANT')}">add_circle</mat-icon>
+        </button> -->
+
+
+        <button [disabled]="!privilegeServ.hasPrivilege('ADD_CONSULTANT_SALES')"  *ngIf="flag === 'sales'" mat-icon-button class="add-user"
+          (click)="addConsultant()" matTooltip="Add" matTooltipPosition="left">
+          <mat-icon [ngClass]="{'item-icon': privilegeServ.hasPrivilege('ADD_CONSULTANT_SALES')}">add_circle</mat-icon>
         </button>
+
+        <button [disabled]="!privilegeServ.hasPrivilege('ADD_CONSULTANT_RECRUITING')"  *ngIf="flag === 'Recruiting'" mat-icon-button class="add-user"
+          (click)="addConsultant()" matTooltip="Add" matTooltipPosition="left">
+          <mat-icon [ngClass]="{'item-icon': privilegeServ.hasPrivilege('ADD_CONSULTANT_RECRUITING')}">add_circle</mat-icon>
+        </button>
+
+        <button [disabled]="!privilegeServ.hasPrivilege('ADD_CONSULTANT_DOM')"  *ngIf="flag === 'DomRecruiting'" mat-icon-button class="add-user"
+        (click)="addConsultant()" matTooltip="Add" matTooltipPosition="left">
+        <mat-icon [ngClass]="{'item-icon': privilegeServ.hasPrivilege('ADD_CONSULTANT_DOM')}">add_circle</mat-icon>
+      </button>
+
+      <button [disabled]="!privilegeServ.hasPrivilege('ADD_PRESALES')"  *ngIf="flag === 'presales'" mat-icon-button class="add-user"
+      (click)="addConsultant()" matTooltip="Add" matTooltipPosition="left">
+      <mat-icon [ngClass]="{'item-icon': privilegeServ.hasPrivilege('ADD_PRESALES')}">add_circle</mat-icon>
+    </button>
+
+
 
         <div class="search-consultant">
           <!-- <mat-icon class="item-icon">person_search</mat-icon> -->
@@ -180,7 +205,7 @@
                 {{element.pseudoname}}</span>
             </ng-template>
             <ng-template #recruiting>
-              <span class="navlink" (click)="goToUserInfo(element.userid)">{{element.fullname}}</span>
+              <span class="navlink" (click)="goToUserInfo(element.userid)">{{element.pseudoname}}</span>
             </ng-template>
 
           </td>
@@ -199,15 +224,49 @@
             <ng-container
               *ngIf="consultant.status == 'Rejected' ||  consultant.status == 'InActive'; then trueCondition else elseTemplate"></ng-container>
             <ng-template #trueCondition>
-              <button [disabled]="!privilegeServ.hasPrivilege('STATUS_CONSULTANT')" class="status-button"
+
+              <button [disabled]="!privilegeServ.hasPrivilege('STATUS_CONSULTANT__DOM')" class="status-button" *ngIf="flag === 'DomRecruiting'"
                 [ngClass]="consultant.status === 'Active' || consultant.status === 'Completed' || consultant.status === 'Initiated' || consultant.status === 'Verified' ? 'mat-primary' : 'mat-warn'"
                 mat-raised-button (click)="goToConsultantTrackDetails(consultant)">{{consultant.status}}</button>
+
+                <button [disabled]="!privilegeServ.hasPrivilege('STATUS_CONSULTANT__RECRUITING')" class="status-button" *ngIf="flag === 'Recruiting'"
+                [ngClass]="consultant.status === 'Active' || consultant.status === 'Completed' || consultant.status === 'Initiated' || consultant.status === 'Verified' ? 'mat-primary' : 'mat-warn'"
+                mat-raised-button (click)="goToConsultantTrackDetails(consultant)">{{consultant.status}}</button>
+
+                <button [disabled]="!privilegeServ.hasPrivilege('STATUS_CONSULTANT_SALES')" class="status-button" *ngIf="flag === 'sales'"
+                [ngClass]="consultant.status === 'Active' || consultant.status === 'Completed' || consultant.status === 'Initiated' || consultant.status === 'Verified' ? 'mat-primary' : 'mat-warn'"
+                mat-raised-button (click)="goToConsultantTrackDetails(consultant)">{{consultant.status}}</button>
+
+                <button [disabled]="!privilegeServ.hasPrivilege('STATUS_PRESALES')" class="status-button" *ngIf="flag === 'presales'"
+                [ngClass]="consultant.status === 'Active' || consultant.status === 'Completed' || consultant.status === 'Initiated' || consultant.status === 'Verified' ? 'mat-primary' : 'mat-warn'"
+                mat-raised-button (click)="goToConsultantTrackDetails(consultant)">{{consultant.status}}</button>
+
+
+
             </ng-template>
+
             <ng-template #elseTemplate>
-              <button [disabled]="!privilegeServ.hasPrivilege('STATUS_CONSULTANT')" class="status-button"
+              <button [disabled]="!privilegeServ.hasPrivilege('STATUS_CONSULTANT__DOM')" class="status-button" *ngIf="flag === 'DomRecruiting'"
                 [ngClass]="consultant.status === 'Active' || consultant.status === 'Completed' || consultant.status === 'Initiated' || consultant.status === 'Verified' ? 'mat-primary' : 'mat-warn'"
                 mat-raised-button>{{consultant.status}}
               </button>
+
+              <button [disabled]="!privilegeServ.hasPrivilege('STATUS_CONSULTANT__RECRUITING')" class="status-button" *ngIf="flag === 'Recruiting'"
+              [ngClass]="consultant.status === 'Active' || consultant.status === 'Completed' || consultant.status === 'Initiated' || consultant.status === 'Verified' ? 'mat-primary' : 'mat-warn'"
+              mat-raised-button>{{consultant.status}}
+            </button>
+
+            <button [disabled]="!privilegeServ.hasPrivilege('STATUS_CONSULTANT_SALES')" class="status-button" *ngIf="flag === 'sales'"
+            [ngClass]="consultant.status === 'Active' || consultant.status === 'Completed' || consultant.status === 'Initiated' || consultant.status === 'Verified' ? 'mat-primary' : 'mat-warn'"
+            mat-raised-button>{{consultant.status}}
+          </button>
+
+          <button [disabled]="!privilegeServ.hasPrivilege('STATUS_PRESALES')" class="status-button" *ngIf="flag === 'presales'"
+            [ngClass]="consultant.status === 'Active' || consultant.status === 'Completed' || consultant.status === 'Initiated' || consultant.status === 'Verified' ? 'mat-primary' : 'mat-warn'"
+            mat-raised-button>{{consultant.status}}
+          </button>
+
+          
             </ng-template>
           </td>
         </ng-container>
@@ -217,11 +276,32 @@
           <th mat-header-cell *matHeaderCellDef> Action </th>
           <td mat-cell *matCellDef="let consultant" nowrap>
             <span class="action-buttons">
-              <button [disabled]="!privilegeServ.hasPrivilege('EDIT_CONSULTANT')" mat-icon-button
-                *ngIf="consultant.status!='Verified' || role!='Employee'" (click)="editConsultant(consultant)"
+              <button [disabled]="!privilegeServ.hasPrivilege('EDIT_CONSULTANT_SALES')" mat-icon-button *ngIf="flag === 'sales'"
+                (click)="editConsultant(consultant)" 
                 class="action-button-ed">
-                <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('EDIT_CONSULTANT')}">edit</mat-icon>
+                <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('EDIT_CONSULTANT_SALES')}">edit</mat-icon>
               </button>
+
+              <button [disabled]="!privilegeServ.hasPrivilege('EDIT_CONSULTANT__RECRUITING')" mat-icon-button *ngIf="flag === 'Recruiting'"
+               (click)="editConsultant(consultant)"
+              class="action-button-ed">
+              <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('EDIT_CONSULTANT__RECRUITING')}">edit</mat-icon>
+            </button>
+
+            <button [disabled]="!privilegeServ.hasPrivilege('EDIT_CONSULTANT__DOM')" mat-icon-button *ngIf="flag === 'DomRecruiting'"
+            (click)="editConsultant(consultant)"
+           class="action-button-ed">
+           <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('EDIT_CONSULTANT__DOM')}">edit</mat-icon>
+         </button>
+
+         <button [disabled]="!privilegeServ.hasPrivilege('EDIT_PRESALES')" mat-icon-button *ngIf="flag === 'presales'"
+         (click)="editConsultant(consultant)"
+        class="action-button-ed">
+        <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('EDIT_PRESALES')}">edit</mat-icon>
+      </button>
+
+
+
               &nbsp;
               <ng-container
                 *ngIf="(flag.toLocaleLowerCase() === 'presales' ||  flag.toLocaleLowerCase() === 'recruiting') then presales else sales">
@@ -235,9 +315,11 @@
                 <button mat-icon-button [style.cursor]="'pointer'"
                   *ngIf="move2sales == true && consultant.status=='Active' && flag=='sales'"
                   (click)="moveProfileToSales(consultant,'Pre-Sales')" class="action-button-ed">
-                  <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('MOVETOPRESALES')}">
+                  <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('MOVETOPRESALES_SALES')}">
                     arrow_backward</mat-icon>
                 </button>
+
+                
               </ng-template>
 
               <ng-template #anotherCondition><!--[disabled]="!privilegeServ.hasPrivilege('MOVETOPRESALES')"-->
@@ -249,21 +331,35 @@
                 </button>
               </ng-template>
 
-
               <ng-template #presales>
-                <button mat-icon-button [disabled]="!privilegeServ.hasPrivilege('MOVETOSALES')"
+                <button mat-icon-button [disabled]="!privilegeServ.hasPrivilege('MOVETOSALES_PRESALES')"
                   [style.cursor]="'pointer'" *ngIf="consultant.status=='Verified' && flag!='Recruiting'"
                   (click)="moveProfileToSales(consultant,'Sales')" class="action-button-ed">
                   <mat-icon
-                    [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('MOVETOSALES')}">arrow_forward</mat-icon>
+                    [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('MOVETOSALES_PRESALES')}">arrow_forward</mat-icon>
                 </button>
               </ng-template>
               <!-- delete -->
-              <button [disabled]="!privilegeServ.hasPrivilege('DELETE_CONSULTANT')"
-                *ngIf="role !== 'Employee' && role !== 'Team Lead'" mat-icon-button
+              <button [disabled]="!privilegeServ.hasPrivilege('DELETE_PRESALES')"  *ngIf="flag==='presales'" mat-icon-button
                 (click)="deleteConsultant(consultant)" class="action-button-ed">
-                <mat-icon [ngClass]="{'delete-icon': privilegeServ.hasPrivilege('DELETE_CONSULTANT')}">delete</mat-icon>
+                <mat-icon [ngClass]="{'delete-icon': privilegeServ.hasPrivilege('DELETE_PRESALES')}">delete</mat-icon>
               </button>
+
+              <button [disabled]="!privilegeServ.hasPrivilege('DELETE_CONSULTANT_SALES')"  *ngIf="flag==='sales'" mat-icon-button
+                (click)="deleteConsultant(consultant)" class="action-button-ed">
+                <mat-icon [ngClass]="{'delete-icon': privilegeServ.hasPrivilege('DELETE_CONSULTANT_SALES')}">delete</mat-icon>
+              </button>
+
+              <button [disabled]="!privilegeServ.hasPrivilege('DELETE_CONSULTANT__RECRUITING')"  *ngIf="flag==='Recruiting'" mat-icon-button
+                (click)="deleteConsultant(consultant)" class="action-button-ed">
+                <mat-icon [ngClass]="{'delete-icon': privilegeServ.hasPrivilege('DELETE_CONSULTANT__RECRUITING')}">delete</mat-icon>
+              </button>
+
+              <button [disabled]="!privilegeServ.hasPrivilege('DELETE_CONSULTANT__DOM')"  *ngIf="flag==='DomRecruiting'" mat-icon-button
+                (click)="deleteConsultant(consultant)" class="action-button-ed">
+                <mat-icon [ngClass]="{'delete-icon': privilegeServ.hasPrivilege('DELETE_CONSULTANT__DOM')}">delete</mat-icon>
+              </button>
+
             </span>
           </td>
         </ng-container>
