--- a/src/app/usit/components/sales/submission-list/submission-list.component.html
+++ b/src/app/usit/components/sales/submission-list/submission-list.component.html
@@ -13,9 +13,24 @@
             <!-- <button mat-icon-button class="add-user" (click)="uploadVendor()">
           <mat-icon class="item-icon">upload</mat-icon>
         </button> -->
-            <button [disabled]="!privilegeServ.hasPrivilege('ADD_SUBMISSIONS')" matTooltip="Add" matTooltipPosition="left" mat-icon-button class="add-submission" (click)="addSubmission()">
-                <mat-icon [ngClass]="{'item-icon': privilegeServ.hasPrivilege('ADD_SUBMISSIONS')}">add_circle</mat-icon>
+            <button [disabled]="!privilegeServ.hasPrivilege('ADD_SUBMISSIONS_SALES')" matTooltip="Add"   *ngIf="this.flag == 'Sales'"
+            matTooltipPosition="left" mat-icon-button class="add-submission" (click)="addSubmission()">
+                <mat-icon [ngClass]="{'item-icon': privilegeServ.hasPrivilege('ADD_SUBMISSIONS_SALES')}">add_circle</mat-icon>
             </button>
+
+
+            <button [disabled]="!privilegeServ.hasPrivilege('ADD_SUBMISSIONS_RECRUITING')" matTooltip="Add" *ngIf="this.flag == 'Recruiting'"
+            matTooltipPosition="left" mat-icon-button class="add-submission" (click)="addSubmission()">
+                <mat-icon [ngClass]="{'item-icon': privilegeServ.hasPrivilege('ADD_SUBMISSIONS_RECRUITING')}">add_circle</mat-icon>
+            </button>
+
+            <button [disabled]="!privilegeServ.hasPrivilege('ADD_SUBMISSIONS_DOM')" matTooltip="Add" *ngIf="this.flag == 'Domrecruiting'"
+            matTooltipPosition="left" mat-icon-button class="add-submission" (click)="addSubmission()">
+                <mat-icon [ngClass]="{'item-icon': privilegeServ.hasPrivilege('ADD_SUBMISSIONS_DOM')}">add_circle</mat-icon>
+            </button>
+           
+
+            
 
             <div class="search-submission">
                 <!-- <mat-icon class="item-icon">person_search</mat-icon> -->
@@ -188,12 +203,37 @@
                     <th mat-header-cell *matHeaderCellDef> Action </th>
                     <td mat-cell *matCellDef="let submission">
                         <span class="action-buttons">
-                            <button [disabled]="!privilegeServ.hasPrivilege('EDIT_SUBMISSIONS')" mat-icon-button (click)="editSubmission(submission)" class="action-button-ed">
-                                <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('EDIT_SUBMISSIONS')}">edit</mat-icon>
+
+                            <button [disabled]="!privilegeServ.hasPrivilege('EDIT_SUBMISSIONS_SALES')" mat-icon-button *ngIf="this.flag == 'Sales'"
+                            (click)="editSubmission(submission)" class="action-button-ed">
+                                <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('EDIT_SUBMISSIONS_SALES')}">edit</mat-icon>
                             </button>
-                            <button  [disabled]="!privilegeServ.hasPrivilege('DELETE_SUBMISSIONS')" mat-icon-button (click)="deleteSubmission(submission)" class="action-button-ed">
-                                <mat-icon [ngClass]="{'delete-icon': privilegeServ.hasPrivilege('DELETE_SUBMISSIONS')}">delete</mat-icon>
+
+                            <button [disabled]="!privilegeServ.hasPrivilege('EDIT_SUBMISSIONS_RECRUITING')" mat-icon-button *ngIf="this.flag == 'Recruiting'"
+                            (click)="editSubmission(submission)" class="action-button-ed">
+                                <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('EDIT_SUBMISSIONS_RECRUITING')}">edit</mat-icon>
                             </button>
+                            <button [disabled]="!privilegeServ.hasPrivilege('EDIT_SUBMISSIONS_DOM')" mat-icon-button *ngIf="this.flag == 'Domrecruiting'"
+                            (click)="editSubmission(submission)" class="action-button-ed">
+                                <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('EDIT_SUBMISSIONS_DOM')}">edit</mat-icon>
+                            </button>
+
+
+                            <button  [disabled]="!privilegeServ.hasPrivilege('DELETE_SUBMISSIONS_SALES')" mat-icon-button *ngIf="this.flag == 'Sales'"
+                             (click)="deleteSubmission(submission)" class="action-button-ed">
+                                <mat-icon [ngClass]="{'delete-icon': privilegeServ.hasPrivilege('DELETE_SUBMISSIONS_SALES')}">delete</mat-icon>
+                            </button>
+
+                            <button  [disabled]="!privilegeServ.hasPrivilege('DELETE_SUBMISSIONS_RECRUITING')" mat-icon-button *ngIf="this.flag == 'Recruiting'"
+                            (click)="deleteSubmission(submission)" class="action-button-ed">
+                                <mat-icon [ngClass]="{'delete-icon': privilegeServ.hasPrivilege('DELETE_SUBMISSIONS_RECRUITING')}">delete</mat-icon> 
+                            </button>
+
+                            <button  [disabled]="!privilegeServ.hasPrivilege('DELETE_SUBMISSIONS_DOM')"  *ngIf="this.flag == 'Domrecruiting'"
+                            mat-icon-button (click)="deleteSubmission(submission)" class="action-button-ed">
+                                <mat-icon [ngClass]="{'delete-icon': privilegeServ.hasPrivilege('DELETE_SUBMISSIONS_DOM')}">delete</mat-icon>
+                            </button>
+                           
                         </span>
                     </td>
                 </ng-container>
