--- a/src/app/usit/components/linkedprofiles/linkedprofiles.component.html
+++ b/src/app/usit/components/linkedprofiles/linkedprofiles.component.html
@@ -84,7 +84,7 @@
                     <!-- Job Title Column-->
                     <ng-container matColumnDef="job_title">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by job_title"
-                            style="width:40%"> Status </th>
+                            style="width:40%"> Profile Headline </th>
                         <td mat-cell *matCellDef="let element" matTooltip="{{element?.job_title}}" matTooltipPosition="below"
                             style="width:40%; overflow: hidden; text-overflow: ellipsis;">
                             {{element?.job_title}} </td>
