--- a/src/app/usit/components/sales/consultant-list/consultant-list.component.scss
+++ b/src/app/usit/components/sales/consultant-list/consultant-list.component.scss
@@ -335,3 +335,9 @@ td.approve-buttons.cdk-cell.cdk-column-Approve-Reject.mat-column-Approve-Reject.
   width: 24px !important;
   height: 24px !important;
 }
+
+.consultant-table-style[_ngcontent-ng-c4089917462] {
+  width: 100%;
+  overflow: unset;
+  display: block;
+}
