consultant Styling fixe

--- a/src/app/usit/components/sales/consultant-list/consultant-list.component.scss
+++ b/src/app/usit/components/sales/consultant-list/consultant-list.component.scss
@@ -336,7 +336,7 @@ td.approve-buttons.cdk-cell.cdk-column-Approve-Reject.mat-column-Approve-Reject.
   height: 24px !important;
 }
 
-.consultant-table-style[_ngcontent-ng-c4089917462] {
+.consultant-table-style[_ngcontent-ng-c27474747] {
   width: 100%;
   overflow: unset;
   display: block;
