--- a/src/app/billpay/invoice-list/invoice-list.component.html
+++ b/src/app/billpay/invoice-list/invoice-list.component.html
@@ -10,35 +10,37 @@
                 <mat-icon class="item-icon">add_circle</mat-icon>
             </button>
 
-            <button mat-icon-button (click)="sendEmail(2)" class="action-button-ed">
+            <!-- <button mat-icon-button (click)="sendEmail(2)" class="action-button-ed">
                 <mat-icon>email</mat-icon>
-            </button>
-            
+            </button> -->
+
             <div class="search-submission">
-                <input matInput type="text" class="search" placeholder="search invoice">
+                <input matInput type="text" class="search" placeholder="search invoice" (keyup)="applyFilter($event)">
             </div>
         </div>
     </div>
     <div id="table-container" class="table-wrapper">
         <section class="mat-elevation-z8 purchase-order-table-style">
-            <table mat-table [dataSource]="dataSource" oncopy="return false">
+            <table mat-table [dataSource]="dataSource" oncopy="return false" matSort (matSortChange)="onSort($event)">
                 <!--- Note that these columns can be defined in any order.
                                   The actual rendered columns are set as a property on the row definition" -->
 
                 <ng-container matColumnDef="SerialNum">
-                    <th mat-header-cell *matHeaderCellDef> S. No </th>
+                    <th mat-header-cell *matHeaderCellDef > S. No </th>
                     <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
                 </ng-container>
 
                 <!-- Bill To Vendor Column -->
                 <ng-container matColumnDef="invoicenumber">
-                    <th mat-header-cell *matHeaderCellDef>Invoice Number</th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by invoicenumber">
+                        Invoice Number</th>
                     <td mat-cell *matCellDef="let element"> {{element.invoiceNumber}} </td>
                 </ng-container>
 
                 <!-- Invoice Date Column -->
                 <ng-container matColumnDef="InvoiceDate">
-                    <th mat-header-cell *matHeaderCellDef>Invoice Date</th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by invoicedate">
+                        Invoice Date</th>
                     <td mat-cell *matCellDef="let element"> {{element.invoiceDate}} </td>
                 </ng-container>
 
@@ -46,44 +48,51 @@
 
                 <!-- Due Date Column -->
                 <ng-container matColumnDef="DueDate">
-                    <th mat-header-cell *matHeaderCellDef>Due Date</th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by duedate">Due
+                        Date</th>
                     <td mat-cell *matCellDef="let element"> {{element.dueDate}} </td>
                 </ng-container>
 
                 <!-- Consultant Column -->
                 <ng-container matColumnDef="Consultant">
-                    <th mat-header-cell *matHeaderCellDef>Consultant</th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header
+                        sortActionDescription="Sort by consultantname">Consultant</th>
                     <td mat-cell *matCellDef="let element"> {{element.consultantName}} </td>
                 </ng-container>
 
                 <!-- Net Term Column -->
                 <ng-container matColumnDef="NetTerm">
-                    <th mat-header-cell *matHeaderCellDef>Net Term</th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by netTerm">Net
+                        Term</th>
                     <td mat-cell *matCellDef="let element"> {{element.netTerm}} </td>
                 </ng-container>
 
                 <!-- Number Of Hours Column -->
                 <ng-container matColumnDef="NoOfHours">
-                    <th mat-header-cell *matHeaderCellDef>No. Of Hours</th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by numberofhours">
+                        No. Of Hours</th>
                     <td mat-cell *matCellDef="let element" class="align-right"> {{element.numberOfHours}} </td>
                 </ng-container>
 
                 <!-- Rate Column -->
                 <ng-container matColumnDef="Rate">
-                    <th mat-header-cell *matHeaderCellDef>Rate</th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by hourlyrate">
+                        Rate</th>
                     <td mat-cell *matCellDef="let element" class="align-right"> {{element.hourlyRate}} </td>
                 </ng-container>
 
                 <!-- Invoice Value Column -->
                 <ng-container matColumnDef="InvoiceValue">
-                    <th mat-header-cell *matHeaderCellDef>Invoice Value</th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by invoicevalue">
+                        Invoice Value</th>
                     <td mat-cell *matCellDef="let element" class="align-right"> {{element.invoiceValue}} </td>
                 </ng-container>
 
                 <!-- Status Column -->
                 <ng-container matColumnDef="Status">
-                    <th mat-header-cell *matHeaderCellDef>Status</th>
-                    <td mat-cell *matCellDef="let element"> 
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by status">Status
+                    </th>
+                    <td mat-cell *matCellDef="let element">
                         <button mat-stroked-button color="primary">{{element.status}}</button>
                     </td>
                 </ng-container>
@@ -136,5 +145,13 @@
                 <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
             </table>
         </section>
+    </div>
+
+    <!-- paginator -->
+    <div class="paginator" *ngIf="dataSource.filteredData.length">
+        <mat-paginator (page)="handlePageEvent($event)" [pageSize]="pageSize" [length]="totalItems" [disabled]="false"
+            [showFirstLastButtons]="showFirstLastButtons" [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
+            [hidePageSize]="true" [pageIndex]="currentPageIndex" aria-label="Select page">
+        </mat-paginator>
     </div>
 </div>
