--- a/src/app/billpay/purchase-order-list/purchase-order-list.component.html
+++ b/src/app/billpay/purchase-order-list/purchase-order-list.component.html
@@ -15,13 +15,13 @@
             </button>
 
             <div class="search-submission">
-                <input matInput type="text" class="search" placeholder="search purchase order">
+                <input matInput type="text" class="search" placeholder="search purchase order" (keyup)="applyFilter($event)">
             </div>
         </div>
     </div>
     <div id="table-container" class="table-wrapper">
         <section class="mat-elevation-z8 purchase-order-table-style">
-            <table mat-table [dataSource]="dataSource" oncopy="return false">
+            <table mat-table [dataSource]="dataSource" oncopy="return false" matSort (matSortChange)="onSort($event)">
                 <!--- Note that these columns can be defined in any order.
                                   The actual rendered columns are set as a property on the row definition" -->
 
@@ -33,123 +33,96 @@
 
                 <!-- Vendor Column -->
                 <ng-container matColumnDef="POTYPE">
-                    <th mat-header-cell *matHeaderCellDef>PO Type</th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by potype">PO Type
+                    </th>
                     <td mat-cell *matCellDef="let element"> {{element.potype}} </td>
                 </ng-container>
 
                 <!-- Consultant Column -->
                 <ng-container matColumnDef="Consultant">
-                    <th mat-header-cell *matHeaderCellDef>Consultant</th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Consultant">
+                        Consultant</th>
                     <td mat-cell *matCellDef="let element"> {{element.consultantname}} </td>
                 </ng-container>
 
+            
                 <!-- Vendor Column -->
                 <ng-container matColumnDef="Vendor">
-                    <th mat-header-cell *matHeaderCellDef>Vendor</th>
-                    <td mat-cell *matCellDef="let element"> {{element.vendorname}} </td>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by vendorname">
+                        Vendor</th>
+                    <td mat-cell *matCellDef="let element" (click)="goToReqInfo(element)"
+                    style="width: 10%; text-wrap: nowrap">   <span class="po-info"> {{element.vendorname}}</span>
+                    </td>
                 </ng-container>
 
                 <!-- Client Column -->
                 <ng-container matColumnDef="Client">
-                    <th mat-header-cell *matHeaderCellDef>Client</th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by endclient">
+                        Client</th>
                     <td mat-cell *matCellDef="let element"> {{element.endclient}} </td>
                 </ng-container>
 
                 <!-- Client Column -->
                 <ng-container matColumnDef="Implpartner">
-                    <th mat-header-cell *matHeaderCellDef>Impl Partner</th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by implpartner">
+                        Impl Partner</th>
                     <td mat-cell *matCellDef="let element"> {{element.implpartner}} </td>
                 </ng-container>
 
                 <!-- Project Start Date Column -->
                 <ng-container matColumnDef="ProjectStartDate">
-                    <th mat-header-cell *matHeaderCellDef>Project
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by projstartdate">
+                        Project
                         Start Date</th>
                     <td mat-cell *matCellDef="let element"> {{element.projstartdate}} </td>
                 </ng-container>
 
                 <!-- Project End Date Column -->
                 <ng-container matColumnDef="ProjectEndDate">
-                    <th mat-header-cell *matHeaderCellDef>Project End
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by projenddate">
+                        Project End
                         Date</th>
                     <td mat-cell *matCellDef="let element"> {{element.projenddate}} </td>
                 </ng-container>
 
                 <!-- Duration Column -->
                 <ng-container matColumnDef="Duration">
-                    <th mat-header-cell *matHeaderCellDef>Duration</th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by duration">
+                        Duration</th>
                     <td mat-cell *matCellDef="let element"> {{element.duration}} </td>
                 </ng-container>
 
                 <!-- Billing Cycle Column -->
                 <ng-container matColumnDef="BillingCycle">
-                    <th mat-header-cell *matHeaderCellDef>Billing Cycle
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by billingcycle">
+                        Billing Cycle
                     </th>
                     <td mat-cell *matCellDef="let element"> {{element.billingcycle}} </td>
                 </ng-container>
 
                 <!-- Net Term Column -->
                 <ng-container matColumnDef="NetTerm">
-                    <th mat-header-cell *matHeaderCellDef>Net Term</th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by netterm">Net
+                        Term</th>
                     <td mat-cell *matCellDef="let element" class="text-right"> {{element.netterm}} </td>
                 </ng-container>
 
                 <!-- Pay Rate Column -->
                 <ng-container matColumnDef="PayRate">
-                    <th mat-header-cell *matHeaderCellDef>Pay From Vendor</th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by hourlyrate">Pay
+                        From Vendor</th>
                     <td mat-cell *matCellDef="let element" class="text-right"> {{element.hourlyrate}} </td>
                 </ng-container>
 
 
                 <!-- Consultant Column -->
                 <ng-container matColumnDef="PayToconsultant">
-                    <th mat-header-cell *matHeaderCellDef>PayToconsultant</th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header
+                        sortActionDescription="Sort by payratetoconsultant">PayToconsultant</th>
                     <td mat-cell *matCellDef="let element" class="text-right"> {{element.payratetoconsultant}} </td>
                 </ng-container>
 
-                <!-- Recruiter Name Column -->
-                <ng-container matColumnDef="RecruiterName">
-                    <th mat-header-cell *matHeaderCellDef>Recruiter
-                        Name</th>
-                    <td mat-cell *matCellDef="let element"> {{element.recname}} </td>
-                </ng-container>
-
-                <!-- Recruiter Email Column -->
-                <ng-container matColumnDef="RecruiterEmail">
-                    <th mat-header-cell *matHeaderCellDef>Recruiter
-                        Email</th>
-                    <td mat-cell *matCellDef="let element"> {{element.recemail}} </td>
-                </ng-container>
-
-                <!-- Recruiter Contact Number Column -->
-                <ng-container matColumnDef="RecruiterContactNumber">
-                    <th mat-header-cell *matHeaderCellDef>
-                        Recruiter Contact Number</th>
-                    <td mat-cell *matCellDef="let element"> {{element.recnumber}} </td>
-                </ng-container>
-
-                <!-- Account Person Name Column -->
-                <ng-container matColumnDef="AccountPersonName">
-                    <th mat-header-cell *matHeaderCellDef>Account
-                        R Person Name</th>
-                    <td mat-cell *matCellDef="let element"> {{element.acrname}} </td>
-                </ng-container>
-
-                <!-- Account Person Email Column -->
-                <ng-container matColumnDef="AccountPersonEmail">
-                    <th mat-header-cell *matHeaderCellDef>Account
-                        R Person Email</th>
-                    <td mat-cell *matCellDef="let element"> {{element.acrmail}} </td>
-                </ng-container>
-
-
-
-                <!-- Account Person Contact Number Column -->
-                <ng-container matColumnDef="AccountPersonContactNumber">
-                    <th mat-header-cell *matHeaderCellDef>Account Person Contact Number</th>
-                    <td mat-cell *matCellDef="let element"> {{element.acrno}} </td>
-                </ng-container>
-
+               
                 <!-- Action Column -->
                 <ng-container matColumnDef="Action" class="actions">
                     <th mat-header-cell *matHeaderCellDef> Action </th>
@@ -168,5 +141,17 @@
                 <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
             </table>
         </section>
+
+        <hr>
     </div>
+
+    <!-- paginator -->
+    <div class="paginator" *ngIf="dataSource.filteredData.length">
+        <mat-paginator (page)="handlePageEvent($event)" [pageSize]="pageSize" [length]="totalItems" [disabled]="false"
+            [showFirstLastButtons]="showFirstLastButtons" [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
+            [hidePageSize]="true" [pageIndex]="currentPageIndex" aria-label="Select page">
+        </mat-paginator>
+    </div>
+
+
 </div>
