--- a/src/app/billpay/receipt-list/receipt-list.component.html
+++ b/src/app/billpay/receipt-list/receipt-list.component.html
@@ -18,4 +18,65 @@
             </div>
         </div>
     </div>
+    <div id="table-container" class="table-wrapper">
+        <section class="mat-elevation-z8 purchase-order-table-style">
+            <table mat-table [dataSource]="dataSource" matSort (matSortChange)="onSort($event)">
+                <!--- Note that these columns can be defined in any order.
+                                  The actual rendered columns are set as a property on the row definition" -->
+
+                <ng-container matColumnDef="SerialNum">
+                    <th mat-header-cell *matHeaderCellDef> S. No </th>
+                    <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
+                </ng-container>
+
+                <!--Created Date Column -->
+                <ng-container matColumnDef="createddate">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by SerialNum">
+                        Created Date
+                    <td mat-cell *matCellDef="let element"> {{element.createddate | date:'MM-dd-yyyy' }} </td>
+                </ng-container>
+
+                <!--Date of Payment Column -->
+                <ng-container matColumnDef="payment_date">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by SerialNum">Date
+                        of Payment</th>
+                    <td mat-cell *matCellDef="let element"> {{element.payment_date}} </td>
+                </ng-container>
+
+
+
+                <!-- Amount Received Column -->
+                <ng-container matColumnDef="amount_received">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by SerialNum">
+                        Amount Received</th>
+                    <td mat-cell *matCellDef="let element"> ${{element.amount_received}} </td>
+                </ng-container>
+
+
+                <!-- Net Term Column -->
+                <ng-container matColumnDef="payment_mode">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by SerialNum">
+                        Payment Mode
+                    <td mat-cell *matCellDef="let element"> {{element.payment_mode}} </td>
+                </ng-container>
+
+                <!-- table ROW -->
+                <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
+                <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
+            </table>
+            <p class="no-data-found" *ngIf="!dataSource.data.length">{{'No matching data found'}}</p>
+        </section>
+        <hr>
+    </div>
+
+    <!-- paginator -->
+    <div class="paginator" *ngIf="dataSource.filteredData.length">
+        <mat-paginator (page)="handlePageEvent($event)" [pageSize]="pageSize" [length]="totalItems" [disabled]="false"
+            [showFirstLastButtons]="showFirstLastButtons" [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
+            [hidePageSize]="true" [pageIndex]="currentPageIndex" aria-label="Select page">
+        </mat-paginator>
+    </div>
+
+
+
 </div>
