--- a/src/app/billpay/receipt-list/receipt-list.component.scss
+++ b/src/app/billpay/receipt-list/receipt-list.component.scss
@@ -80,17 +80,10 @@
   }
   
   .mat-column-SerialNum,
-  .mat-column-InterviewId,
-  .mat-column-ConsultantName,
-  .mat-column-DateAndToI,
-  .mat-column-Round,
-  .mat-column-Mode,
-  .mat-column-Vendor,
-  .mat-column-ImplementationPartner,
-  .mat-column-Client,
-  .mat-column-DateOfSubmission,
-  .mat-column-EmployeerName,
-  .mat-column-InterviewStatus {
+  .mat-column-createddate,
+  .mat-column-payment_date,
+  .mat-column-amount_received,
+  .mat-column-payment_mode {
     border-right: 1px solid lightgray;
   }
   
@@ -261,4 +254,15 @@
   .consultant-name, .employeer-name {
     cursor: pointer;
     color: #0275d8;
+  }
+
+
+  .table-wrapper {
+    flex: 1;
+    width: 100%;
+    overflow: auto;
+  }
+  
+  table {
+    width: 100%;
   }
