Assign consultant to our employees at time of addition update

--- a/src/app/usit/components/sales/consultant-list/add-consultant/add-consultant.component.html
+++ b/src/app/usit/components/sales/consultant-list/add-consultant/add-consultant.component.html
@@ -21,7 +21,7 @@
       <div class="form-column-left">
         <!-- First Name -->
         <mat-form-field appearance="fill">
-          <mat-label>First Name</mat-label>
+          <mat-label>First Name lax</mat-label>
           <input matInput formControlName="firstname" maxlength="50" (input)="camelCase($event)">
           <mat-error *ngIf="consultantForm.get('firstname').hasError('required')">First
             Name is Required</mat-error>
@@ -167,6 +167,38 @@
             Required
           </mat-error>
         </mat-form-field>
+
+<!-- Assign consultant -->
+<mat-form-field appearance="fill" *ngIf="this.role !== 'Employee'">
+  <mat-label>Assign Consultant To</mat-label>
+    <mat-chip-grid #chipGrid aria-label="Assign consultant" formControlName="empid">
+      <mat-chip-row *ngFor="let employee of selectData" class="chip-style" (removed)="remove(employee)">
+        {{ employee.fullname }}
+        <button matChipRemove [attr.aria-label]="'remove ' + employee">
+          <mat-icon>cancel</mat-icon>
+        </button>
+      </mat-chip-row>
+    </mat-chip-grid>
+    
+    <input
+      #employeeInput
+      formControlName="empid"
+      [matChipInputFor]="chipGrid"
+      [matAutocomplete]="auto"
+      (matChipInputTokenEnd)="add($event)"
+    />
+    <mat-autocomplete #auto="matAutocomplete" formControlName="empid">
+      <mat-checkbox [checked]="isAllOptionsSelected" color="primary" (change)="onSelectAll($event)">{{ isAllOptionsSelected ? 'UnSelect All': 'Select All'}}</mat-checkbox>
+      <mat-option *ngFor="let employee of empArr">
+        <div (click)="optionClicked($event, employee)">
+          <mat-checkbox [checked]="employee.selected" color="primary" (change)="toggleSelection(employee)" (click)="$event.stopPropagation()">
+            {{ employee.fullname }}
+          </mat-checkbox>
+        </div>
+      </mat-option>
+    </mat-autocomplete>
+  <mat-error *ngIf="consultantForm.get('empid')!.hasError('required') || consultantForm.get('empid')?.value ">Select Executive</mat-error>
+</mat-form-field>
 
       </div>
     </div>
